--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loarcana DeckBuilder</title>
+    <title>Lorcana DeckBuilder</title>
     <script data-ui5-config type="application/json">
       {
         "theme": "sap_horizon"
